@@ -2,7 +2,6 @@
 # include <config.h>
 #endif
 
-
 # define WIN32_LEAN_AND_MEAN
 # include <winsock2.h>
 # undef WIN32_LEAN_AND_MEAN
